# homework-0

./: README.md  pyproject.toml
problem1/: leap_year.py  test_leap_year.py
problem2/: duplicates.py  test_duplicates.py
problem3/: collatz.py
